--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,5 @@
 .bg{
-    background-image: url('../images/background.png');
+    background-image: url('../images/back4.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100%;
