--- a/assets/pages/header_application.css
+++ b/assets/pages/header_application.css
@@ -3,7 +3,7 @@
     width: auto;
     height: 8.3vh;
     top: 0px;
-    background: #E36666;
+    background: black;
 }
 
 .header-image-application{
@@ -31,6 +31,11 @@
     color: #FFFFFF;
 }
 
+.link-user:hover{
+    color: #E36666;
+    transition: all 0.5s ease-in;
+}
+
 .link-owner{
     position: absolute;
     text-decoration: none;
@@ -41,4 +46,9 @@
     font-size: 16px;
     line-height: 28px;
     color: #FFFFFF; 
+}
+
+.link-owner:hover{
+    color: #E36666;
+    transition: all 0.5s ease-in;
 }
