--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -6,14 +6,10 @@
     padding: 0;
 }
 .containers-main{
-
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: url('cadastro.svg');
-    background-position: center;
-    background-size: 100%, 100%, contain;
+    background-image: url('/../assets/images/back5.jpg');
+    background-attachment: fixed;
     background-repeat: no-repeat;
+    background-size: 100% 100% contain;
 }
 
 .container-background{
