--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -149,13 +149,17 @@ form .button {
     width: 244px;
     height: 45px;
 
-    background: #29B8F5;
+    background: black;
     border-radius: 52px;
+    outline: 0;
+    border: 0;
 
 }
 
 form .button:hover {
-    background-color: #477dbb;
+    background-color: #373b42;
+    transition: all 0.5s ease-in;
+    font-family: Roboto;
 }
 
 form a {
