--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -51,11 +51,10 @@
 }
 
 .container-cadastro {
-    position: absolute;
+    position: center;
     width: 244px;
     height: 45px;
-    left: calc(50% - 244px/2);
-    top: calc(50% - 45px/2 + 125px);
+    margin-top: 15%;
     background: #29B8F5;
     border-radius: 52px;
 }
