--- a/assets/css/list_owner.css
+++ b/assets/css/list_owner.css
@@ -1,8 +1,9 @@
 .container-background2{
+    position: relative;
     background-image: url(/assets/images/image45.png);
     background-repeat: no-repeat;
     background-size: 100%;
-    background-attachment: local;
+    background-attachment: fixed;
 }
 
 .bottom{
@@ -13,6 +14,48 @@
     border-radius: 52px;
     display: inline-block;
     vertical-align: middle;
+}
+
+.bottom2{
+    padding: 5px;
+    width: 48%;
+    height: 35px;
+    background: black;
+    border-radius: 52px;
+    display: inline-block;
+    vertical-align: middle;
+}
+.calendary{
+    position: relative;
+    width: 174px;
+    height: 41px;
+    left:56%;
+    bottom: 60%;
+
+    background: #FFFFFF;
+    border-radius: 30px;
+}
+
+.options{
+    position: relative;
+    width: 600px;
+    margin-top: 3%;
+    margin-bottom: 2%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
+}
+
+.options2{
+    position: relative;
+    width: 350px;
+    left:56%;
+    bottom: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-content: space-between;
 }
 
 .option-style{
@@ -34,12 +77,80 @@ a:link
     font-family: Roboto;
 }
 
-.options{
-    width: 600px;
-    margin-top: 3%;
+.bottom2:hover{
+    background-color: #373b42;
+    transition: all 0.5s ease-in;
+    font-family: Roboto;
+}
+
+.container-imovel{
+    position: relative;
+    width: 828px;
+    height: 302px;
+    display: block;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
-    justify-content: space-between;
-    align-content: space-between;
+    background: rgba(196, 196, 196, 0.5);
+}
+
+
+.image{
+    width: 55%;
+    height: 98%;
+    background-size: cover;
+    background-image: url(../images/croissant-matzZGQk4o4-unsplash.jpg);
+    border-radius: 30px;
+}
+
+.text{
+    position: absolute;
+    width: 320px;
+    height: 28px;
+    left: 130%;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+}
+
+.city{
+    position: relative;
+    left:58%;
+    bottom: 92%;
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+    background-image: url(../images/cidade.png);
+}
+
+.state{
+    position: relative;
+    left:58%;
+    bottom: 86%;
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+    background-image: url(../images/image13.png);
+}
+
+.road{
+    position: relative;
+    left:58%;
+    bottom: 81%;
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+    background-image: url(../images/localization.png);
+}
+
+.price{
+    position: relative;
+    left:58%;
+    bottom: 77%;
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+    background-image: url(../images/dinheiro.png);
 }
