--- a/assets/css/um_imovel.css
+++ b/assets/css/um_imovel.css
@@ -1,4 +1,4 @@
-.container-background2{
+.container-background2 {
     position: relative;
     background-image: url(/assets/images/image45.png);
     background-repeat: no-repeat;
@@ -6,37 +6,37 @@
     background-attachment: fixed;
 }
 
-.bottom2{
+.bottom2 {
     padding: 5px;
-    width: 48%;
+    width: 150px;
     height: 35px;
     background: black;
     border-radius: 52px;
     display: inline-block;
     vertical-align: middle;
 }
-.calendary{
+
+.calendary {
     position: relative;
     width: 174px;
     height: 41px;
-    left:56%;
+    left: 56%;
     bottom: 60%;
-
     background: #FFFFFF;
     border-radius: 30px;
 }
 
-.options2{
+.options2 {
     position: relative;
     width: 350px;
-    left:58%;
-    bottom: 55%;
+    left: 50%;
+    bottom: 80%;
     display: flex;
     justify-content: space-between;
     align-content: space-between;
 }
 
-.option-style{
+.option-style {
     color: white;
     text-align: center;
     font-family: Roboto;
@@ -44,24 +44,23 @@
     font-size: 20px;
 }
 
-a:link 
-{ 
- text-decoration:none; 
-} 
+a:link {
+    text-decoration: none;
+}
 
-.bottom:hover{
+.bottom:hover {
     background-color: #373b42;
     transition: all 0.5s ease-in;
     font-family: Roboto;
 }
 
-.bottom2:hover{
+.bottom2:hover {
     background-color: #373b42;
     transition: all 0.5s ease-in;
     font-family: Roboto;
 }
 
-.container-imovel{
+.container-imovel {
     position: relative;
     margin-top: 10%;
     width: 1200px;
@@ -72,8 +71,7 @@ a:link
     background: rgba(196, 196, 196, 0.5);
 }
 
-
-.image{
+.image {
     width: 55%;
     height: 98%;
     background-size: cover;
@@ -81,12 +79,11 @@ a:link
     border-radius: 30px;
 }
 
-.text{
+.text {
     position: absolute;
     width: 320px;
     height: 28px;
     left: 130%;
-
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
@@ -94,9 +91,9 @@ a:link
     line-height: 28px;
 }
 
-.city{
+.city {
     position: relative;
-    left:58%;
+    left: 58%;
     bottom: 92%;
     width: 30px;
     height: 30px;
@@ -104,9 +101,9 @@ a:link
     background-image: url(../images/cidade.png);
 }
 
-.state{
+.state {
     position: relative;
-    left:58%;
+    left: 58%;
     bottom: 86%;
     width: 30px;
     height: 30px;
@@ -114,9 +111,9 @@ a:link
     background-image: url(../images/image13.png);
 }
 
-.road{
+.road {
     position: relative;
-    left:58%;
+    left: 58%;
     bottom: 81%;
     width: 30px;
     height: 30px;
@@ -124,9 +121,9 @@ a:link
     background-image: url(../images/localization.png);
 }
 
-.price{
+.price {
     position: relative;
-    left:58%;
+    left: 58%;
     bottom: 77%;
     width: 30px;
     height: 30px;
@@ -134,15 +131,15 @@ a:link
     background-image: url(../images/dinheiro.png);
 }
 
-.check{
+.check {
     position: relative;
     left: 58%;
     bottom: 65%;
-    display:flex;
+    display: flex;
     grid-gap: 10px;
 }
 
-.check input{
+.check input {
     padding: 10px 15px;
     border-radius: 30px;
     outline: 0;
