--- a/assets/css/agenda.css
+++ b/assets/css/agenda.css
@@ -1,5 +1,5 @@
 .agenda-background{
-    background-image: url('/../assets/images/owner_back.jpg');
+    background-image: url('/../assets/images/back6.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -7,8 +7,7 @@
 
 .check_in{
     position: relative;
-    left:58%;
-    bottom: 81%;
+    left: 5%;
     width: 30px;
     height: 30px;
     background-size: cover;
@@ -16,8 +15,7 @@
 
 .check_out{
     position: relative;
-    left:58%;
-    bottom: 77%;
+    left:5%;
     width: 30px;
     height: 30px;
     background-size: cover;
@@ -27,11 +25,47 @@
     position: absolute;
     width: 320px;
     height: 28px;
-    left: 130%;
-
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 28px;
+    left: 125px;
+    top: 0px;
 }
+
+.dates-container{
+    margin-top: 10%;
+    background: rgba(148, 147, 147, 0.5);
+    width: 50%;
+    margin-left: 25%;
+}
+
+.dates-container:hover{
+    background: rgba(95, 94, 94, 0.5);
+}
+
+.text-dates{
+    position: relative;
+    font-family: Roboto;
+    white-space: nowrap;
+    font-size: 24px;
+    left:5%;
+    margin-bottom: 25%;
+    width: 30px;
+    height: 30px;
+}
+
+.titulo{
+    margin-left: 45%;
+    margin-top: 5%;
+    font-size: 50px;
+    font-family: Roboto;
+}
+
+.paragrafo{
+    margin-left: 35%;
+    margin-top: 5%;
+    font-size: 25px;
+    font-family: Roboto;
+}   
