--- a/assets/css/view_list.css
+++ b/assets/css/view_list.css
@@ -46,7 +46,7 @@
     background-image: url(../images/dinheiro.png);
 }
 
-.price{
+.price {
     position: absolute;
     width: 184px;
     height: 63px;
@@ -56,7 +56,7 @@
     border-radius: 30px;
     outline: 0;
     border: 0;
-    padding-left:15px;
+    padding-left: 15px;
     font-family: Roboto;
     font-size: 15px;
 }
@@ -79,17 +79,16 @@
     animation: blinkCursor 500ms steps(40) infinite normal, typing 4s steps(40) 1s normal both;
 }
 
-.option-style{
+.option-style {
     position: relative;
     color: white;
     text-align: center;
     font-family: Roboto;
     font-weight: normal;
     font-size: 20px;
-    top: 30%;
 }
 
-.city{
+.city {
     position: absolute;
     width: 563px;
     height: 63px;
@@ -99,7 +98,7 @@
     border-radius: 30px;
     outline: 0;
     border: 0;
-    padding-left:15px;
+    padding-left: 15px;
     font-family: Roboto;
     font-size: 15px;
 }
@@ -122,7 +121,6 @@
     }
 }
 
-
 .city1 {
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
@@ -135,8 +133,6 @@
     margin-top: 5%;
     margin-left: 10%;
 }
-
-
 
 .city3 {
     -webkit-filter: grayscale(100%);
@@ -155,7 +151,6 @@
     -webkit-filter: grayscale(0);
     filter: grayscale(0);
 }
-
 
 .city3:hover {
     -webkit-filter: grayscale(0);
@@ -177,6 +172,13 @@
     display: inline-block;
 }
 
+.new {
+    position: relative;
+    width: 244px;
+    height: 35px;
+    background: black;
+    border-radius: 52px;
+}
 
 .bottom {
     position: relative;
@@ -268,7 +270,7 @@ a:link {
     position: relative;
     width: 1000px;
     height: 380px;
-    margin-top:2%;
+    margin-top: 2%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -296,8 +298,7 @@ a:link {
     line-height: 28px;
 }
 
-
-.options-component{
+.options-component {
     position: relative;
     width: 100%;
     height: 210px;
@@ -305,7 +306,7 @@ a:link {
     background: rgba(196, 196, 196, 0.5);
 }
 
-.country{
+.country {
     position: absolute;
     width: 563px;
     height: 63px;
@@ -315,12 +316,12 @@ a:link {
     border-radius: 30px;
     outline: 0;
     border: 0;
-    padding-left:15px;
+    padding-left: 15px;
     font-family: Roboto;
     font-size: 15px;
 }
 
-.start-date{
+.start-date {
     position: absolute;
     width: 156px;
     height: 63px;
@@ -330,12 +331,12 @@ a:link {
     border-radius: 30px;
     outline: 0;
     border: 0;
-    padding-left:15px;
+    padding-left: 15px;
     font-family: Roboto;
     font-size: 15px;
 }
 
-.end-date{
+.end-date {
     position: absolute;
     width: 153px;
     height: 63px;
@@ -345,12 +346,12 @@ a:link {
     border-radius: 30px;
     outline: 0;
     border: 0;
-    padding-left:15px;
+    padding-left: 15px;
     font-family: Roboto;
     font-size: 15px;
 }
 
-.people{
+.people {
     position: absolute;
     width: 186px;
     height: 63px;
@@ -360,14 +361,12 @@ a:link {
     border-radius: 30px;
     outline: 0;
     border: 0;
-    padding-left:15px;
+    padding-left: 15px;
     font-family: Roboto;
     font-size: 15px;
 }
 
-
-
-.find{
+.find {
     position: absolute;
     width: 184px;
     height: 63px;
@@ -383,7 +382,7 @@ a:link {
     color: white;
 }
 
-.find:hover{
+.find:hover {
     background-color: #373b42;
     transition: all 0.5s ease-in;
     font-family: Roboto;
